src/parser/snapshots/monkey_language_server__parser__test__let_statement_broken_5_errors.snap
---
source: src/parser/test.rs
description: let a = @;
expression: "parser_errors(\"let a = @;\", errors)"
---
let a = @;
        ^ SyntaxError: Unexpected '@'.
