src/parser/snapshots/monkey_language_server__parser__test__lexer_erro.snap
---
source: src/parser/test.rs
description: "@"
expression: result
---
[
    Err(UnexpectedToken("SyntaxError: Unexpected '@'."), (0,0)->(0,1)),
]

===================================

@
^ [Error] SyntaxError: Unexpected '@'.
