src/parser/snapshots/monkey_language_server__parser__test__mixed.snap
---
source: src/parser/test.rs
description: "let foo = 1;\n[1, 2];"
expression: result
---
[
    Let {
        token: Token(Let, "let", (0,0)->(0,3)),
        name: Identifier {
            token: Token(Identifier, "foo", (0,4)->(0,7)),
            name: "foo",
        },
        value: Int {
            token: Token(Int, "1", (0,10)->(0,11)),
            value: 1,
        },
        range: Range {
            start: Position {
                line: 0,
                character: 0,
            },
            end: Position {
                line: 0,
                character: 12,
            },
        },
    },
    Array {
        token: Token(LBracket, "[", (1,0)->(1,1)),
        elems: Ok(
            [
                Ok(
                    Int {
                        token: Token(Int, "1", (1,1)->(1,2)),
                        value: 1,
                    },
                ),
                Ok(
                    Int {
                        token: Token(Int, "2", (1,4)->(1,5)),
                        value: 2,
                    },
                ),
            ],
        ),
        range: Range {
            start: Position {
                line: 1,
                character: 0,
            },
            end: Position {
                line: 1,
                character: 6,
            },
        },
    },
]

===================================

let foo = 1;
[1, 2];
