src/parser/snapshots/monkey_language_server__parser__test__mixed_err.snap
---
source: src/parser/test.rs
description: "let foo;\n[1 2, 3];"
expression: result
---
[
    Err(ExpectedTokenNotFound("SyntaxError: Expected '=' not found."), (0,7)->(0,8)),
    Array {
        token: Token(LBracket, "[", (1,0)->(1,1)),
        elems: Ok(
            [
                Ok(
                    Int {
                        token: Token(Int, "1", (1,1)->(1,2)),
                        value: 1,
                    },
                ),
                Err(
                    Err(ExpectedTokenNotFound("SyntaxError: Expected ',' not found."), (1,3)->(1,4)),
                ),
            ],
        ),
    },
]

===================================

let foo;
       ^ SyntaxError: Expected '=' not found.
[1 2, 3];
   ^ SyntaxError: Expected ',' not found.
