src/parser/snapshots/monkey_language_server__parser__test__mixed_err_errors.snap
---
source: src/parser/test.rs
description: "let foo;\n[1 2, 3];"
expression: "parser_errors(\"let foo;\\n[1 2, 3];\", errors)"
---
let foo;
       ^ SyntaxError: Expected '=' not found.
[1 2, 3];
   ^ SyntaxError: Expected ',' not found.
