src/parser/snapshots/monkey_language_server__parser__test__nil_expr.snap
---
source: src/parser.rs
description: nil
expression: stmts
---
[
    Nil {
        token: Token(Nil, "nil", (0,0)->(0,3)),
    },
]
