src/parser/snapshots/monkey_language_server__parser__test__nil_expr_errors.snap
---
source: src/parser/test.rs
description: nil
expression: "parser_errors(\"nil\", errors)"
---
nil
