src/parser/snapshots/monkey_language_server__parser__test__operator_precedence_1.snap
---
source: src/parser/test.rs
description: "-a * b"
expression: result
---
[
    Infix {
        token: Token(Asterisk, "*", (0,3)->(0,4)),
        left: Prefix {
            token: Token(Minus, "-", (0,0)->(0,1)),
            right: Identifier {
                token: Token(Identifier, "a", (0,1)->(0,2)),
                name: "a",
            },
            operator: Minus,
            range: Range {
                start: Position {
                    line: 0,
                    character: 0,
                },
                end: Position {
                    line: 0,
                    character: 2,
                },
            },
        },
        right: Identifier {
            token: Token(Identifier, "b", (0,5)->(0,6)),
            name: "b",
        },
        operator: Mult,
        range: Range {
            start: Position {
                line: 0,
                character: 3,
            },
            end: Position {
                line: 0,
                character: 6,
            },
        },
    },
]

===================================

-a * b
